test/corpus/definition.txt
==================
Simple definition
==================

signal a <= b

---

(source_file
  (statement
    (definition
      (identifiers
        (identifier))
      (atomics
        (identifier)))))

==================
Multiple output definition
==================

signal a, b, d <= c

---

(source_file
  (statement
    (definition
      (identifiers
        (identifier)
        (identifier)
        (identifier))
      (atomics
        (identifier)))))

==================
Multiple input definition
==================

signal a <= c, b, d

---

(source_file
  (statement
    (definition
      (identifiers
        (identifier))
      (atomics
        (identifier)
        (identifier)
        (identifier)))))

==================
Number input definition
==================

signal a <= 0

---

(source_file
  (statement
    (definition
      (identifiers
        (identifier))
      (atomics
        (number)))))

==================
Multiple number input definition
==================

signal a <= 0, 1, 2, 98, 123

---

(source_file
  (statement
    (definition
      (identifiers
        (identifier))
      (atomics
        (number)
        (number)
        (number)
        (number)
        (number)))))
